--- a/README
+++ b/README
@@ -4,11 +4,20 @@ Copyright by Florian Hülsmann, 2012
 
 License:
 	LGPLv3 (plugin, php and javascript code)
-	MIT License (svg-edit, http://code.google.com/p/svg-edit/)
+	MIT License/Apache License (svg-edit, http://code.google.com/p/svg-edit/)
 	Creative Commons 3.0 by-sa (artwork, css stylesheets)
 
 Authors:
 	Florian Hülsmann <fh@cbix.de>
 
-This app enables you to view, create and modify SVG files inside
-the ownCloud user interface.
+Description:
+	This app enables you to view, create and modify SVG files inside
+	the ownCloud user interface.
+
+Installation:
+	Simply copy the files_svgedit folder into your ownCloud's /apps/
+	directory, login as an administrator and enable this app in the
+	applications list.
+
+Usage:
+	To edit an SVG file, simply click on it in your directory listing.
