--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -4,8 +4,8 @@
 * @author Christian Reiner
 * @copyright 2011-2012 Christian Reiner <foss@christian-reiner.info>
 * @license GNU Affero General Public license (AGPL)
-* @link information http://apps.owncloud.com/content/show.php/Shorty?content=150401
-* @link repository https://svn.christian-reiner.info/svn/app/oc/shorty
+* @link information 
+* @link repository https://svn.christian-reiner.info/svn/app/oc/imprint
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
@@ -24,5 +24,5 @@
 
 Changelog: 
 
-* Tue Aug 07 2012 Christian Reiner: version 1.0.0
+* Tue Aug 08 2012 Christian Reiner: version 1.0.0
 Initial release.
