--- a/doc/README
+++ b/doc/README
@@ -4,8 +4,8 @@
 * @author Christian Reiner
 * @copyright 2011-2012 Christian Reiner <foss@christian-reiner.info>
 * @license GNU Affero General Public license (AGPL)
-* @link information http://apps.owncloud.com/content/show.php/Shorty?content=150401
-* @link repository https://svn.christian-reiner.info/svn/app/oc/shorty
+* @link information 
+* @link repository https://svn.christian-reiner.info/svn/app/oc/imprint
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
@@ -22,21 +22,10 @@
 * If not, see <http://www.gnu.org/licenses/>.
 *****
 
-This "shorty" package implements a plugin for the ownCloud web application.
-Shorty offers a service to store, manage and use a collection of short links
-pointing to ressources in the web. The features are a combination of a
-centralized bookmarks collection, an url shortener and a basic access control.
-The collection is presented as a list of "shorties". A shorty can be created
-either manually in the list ("New shorty") or by using the "Shortlet". The
-Shortlet is something like a Bookmarklet, a script based bookmark meant to be
-stored inside the bookmark collection of a web browser. When clicked, the page
-currently open in the browser will be added to the list of existing shorties.
-
-Each Shorty contains a source and a target url. The source url can be used to
-be posted in forums, sent inside an email message or whatever. It is typically
-shorter than the target url, a full blown web url. But that actually depends
-on the target url and the backend used. The target url is the ressource
-identified by the shorty. Basic access control is implemented to control the
-access of shorties posted to forums or sent per email, but not on a per user or
-per group base. Existing shorties can be blocked for usage, set to expire on a
-certain date and obviously can be removed permanently again.
+This "imprint" app implements a plugin for the ownCloud web application.
+It provides a very simply means to add a legal notice, an imprint to the
+framework. Such notice is required in some countries when offering a service
+on the internet.
+The app is kep extremely simple. No fancy configuration options, no complex
+setup. just activate it, configure the notices content and where to place the
+reference and that's it. 
