--- a/doc/README
+++ b/doc/README
@@ -22,10 +22,10 @@
 * If not, see <http://www.gnu.org/licenses/>.
 *****
 
-This "imprint" app implements a plugin for the ownCloud web application.
+This imprint app implements a plugin for the ownCloud web application.
 It provides a very simply means to add a legal notice, an imprint to the
 framework. Such notice is required in some countries when offering a service
 on the internet.
-The app is kep extremely simple. No fancy configuration options, no complex
+The app is kept extremely simple. No fancy configuration options, no complex
 setup. just activate it, configure the notices content and where to place the
-reference and that's it. 
+reference, thats all.
