imprint: prepared version 0.1.1

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -24,5 +24,7 @@
 
 Changelog: 
 
-* Tue Aug 08 2012 Christian Reiner: version 1.0.0
+* Thu Aug 09 2012 Christian Reiner: version 1.0.1
+Fixed german translation.
+* Wed Aug 08 2012 Christian Reiner: version 1.0.0
 Initial release.
