imprint: preparation of version 0.1.2

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -24,6 +24,8 @@
 
 Changelog: 
 
+* Fri Aug 10 2012 Christian Reiner: version 1.0.2
+Fixed reference url to use propper syntax.
 * Thu Aug 09 2012 Christian Reiner: version 1.0.1
 Fixed german translation.
 * Wed Aug 08 2012 Christian Reiner: version 1.0.0
