--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -24,8 +24,10 @@
 
 Changelog: 
 
+* Sat Aug 11 2012 Christian Reiner: version 1.0.3
+Fixed reference url to use propper syntax in all cases.
 * Fri Aug 10 2012 Christian Reiner: version 1.0.2
-Fixed reference url to use propper syntax.
+Fixed reference url to use propper syntax in a special case.
 * Thu Aug 09 2012 Christian Reiner: version 1.0.1
 Fixed german translation.
 * Wed Aug 08 2012 Christian Reiner: version 1.0.0
